force-app/main/default/objects/ProductExternal__c/ProductExternal__c.object-meta.xml
<CustomObject>
    <label>Product External</label>
    <nameField>
        <label>ProductExternal Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Products External</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>