force-app/main/default/objects/ProductExternal__c/fields/Image_Display__c.field-meta.xml
<CustomField>
    <fullName>Image_Display__c</fullName>
    <formula>IMAGE(Image__c, &quot;Product Image&quot;, 150, 150)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Image Display</label>
    <type>Text</type>
</CustomField>